--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,53 @@
  *= require_tree .
  *= require_self
  */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Newsreader', serif;
+}
+
+body {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+
+button {
+    width: 100px;
+    height: 50px;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:visited {
+    color: inherit;
+}
+
+table {
+    border-collapse: collapse;
+    border: 1px solid grey;
+}
+
+th, td {
+    border: 1px solid grey;
+    text-align: center;
+}
+
+td {
+    padding: 4px;
+}
+
+th {
+    padding: 8px;
+}
+
+footer {
+    position: absolute;
+    width: 100%;
+    top: 90%;
+}
