--- a/app/assets/stylesheets/qustions.scss
+++ b/app/assets/stylesheets/qustions.scss
@@ -1,3 +1,54 @@
 // Place all the styles related to the questions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+@import "pallete";
+@import "index";
+
+.questions_wrapper {
+  margin: 50px 0;
+  display: grid;
+  grid-template-columns: 400px 200px;
+  grid-column-gap: 64px;
+  align-items: center;
+  justify-content: center;
+
+  h1 {
+    margin: 0;
+  }
+
+  .new_question {
+    width: 180px;
+    height: 50px;
+    @include button_style;
+    color: black;
+
+    &:hover {
+      color: black;
+    }
+  }
+}
+
+.edit_button {
+  @include button_style;
+  width: 180px;
+  height: 50px;
+  color: black;
+  margin: 60px auto 0 auto;
+
+  &:hover {
+    color: black;
+  }
+}
+
+.question_submit {
+  @include button_style;
+  width: 180px;
+  height: 50px;
+  color: black;
+  margin: 60px auto 0 auto;
+
+  &:hover {
+    color: black;
+  }
+}
