--- a/app/assets/stylesheets/tests.scss
+++ b/app/assets/stylesheets/tests.scss
@@ -1,3 +1,125 @@
 // Place all the styles related to the tests controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+@import "index";
+@import "pallete";
+
+h1 {
+  text-align: center;
+  margin-top: 50px;
+}
+
+a:hover {
+  color: $green;
+}
+
+.new_test {
+  width: 150px;
+  height: 50px;
+  @include button_style;
+
+  &:hover {
+    color: black;
+  }
+}
+
+.header_wrapper {
+  margin: 50px 0;
+  display: grid;
+  grid-template-columns: 200px 200px;
+  grid-column-gap: 64px;
+  align-items: center;
+  justify-content: center;
+
+  h1 {
+    margin: 0;
+  }
+}
+
+.table {
+  width: 95%;
+  margin: 0 auto;
+
+  tr {
+    th {
+      font-size: 20px;
+    }
+  }
+}
+
+form {
+  width: 700px;
+  margin: 100px auto;
+  display: grid;
+  grid-template-rows: repeat(4, 40px);
+  grid-row-gap: 36px;
+
+  input, select {
+    width: 100%;
+    height: 40px;
+    padding-left: 16px;
+    font-size: 18px;
+
+    &:active, &:focus {
+      outline: none;
+    }
+  }
+
+  .submit {
+    justify-self: center;
+    align-self: center;
+
+    input[type=submit] {
+      width: 150px;
+      height: 40px;
+      @include button_style;
+      color: black;
+      cursor: pointer;
+      text-align: center;
+      padding: 0;
+      justify-self: center;
+
+      &:hover {
+        color: black;
+      }
+    }
+  }
+}
+
+.back {
+  @include navigation_button
+}
+
+.test_card_wrapper {
+  display: grid;
+  grid-template-rows: repeat(4, 40px);
+  width: 700px;
+  margin: 50px auto 0 auto;
+  border: 1px solid grey;
+  border-radius: 4px;
+  min-height: 260px;
+  padding: 24px;
+
+  .title {
+    font-weight: 700;
+  }
+
+  .actions_wrapper {
+    justify-self: center;
+    display: grid;
+    grid-template-columns: 150px 200px;
+    grid-column-gap: 36px;
+
+    .edit {
+      width: 150px;
+      height: 50px;
+      @include button_style;
+    }
+
+    .show_questions {
+      width: 200px;
+      height: 50px;
+      @include button_style;
+    }
+  }
+}
