fix after review

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -6,12 +6,12 @@
 </div>
 
 <table class="table">
-  <tbody>
+  <thead>
     <tr>
       <th>Title</th>
       <th colspan="3">Actions</th>
     </tr>
-  </tbody>
+  </thead>
 
   <%= render @test.questions %>
 </table>
