--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -7,13 +7,15 @@
 </div>
 
 <table class="table">
-  <tr>
-    <th>Title</th>
-    <th>Level</th>
-    <th>Category</th>
-    <th>QuestionsCount</th>
-    <th colspan="3">Actions</th>
-  </tr>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Level</th>
+      <th>Category</th>
+      <th>QuestionsCount</th>
+      <th colspan="3">Actions</th>
+    </tr>
+  </thead>
 
   <%= render @tests %>
 </table>
