--- a/app/assets/stylesheets/tests.scss
+++ b/app/assets/stylesheets/tests.scss
@@ -92,7 +92,7 @@ form {
 
 .test_card_wrapper {
   display: grid;
-  grid-template-rows: repeat(4, 40px);
+  grid-template-rows: repeat(3, 40px) 1fr;
   width: 700px;
   margin: 50px auto 0 auto;
   border: 1px solid grey;
