--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,3 +1,9 @@
-<tr>
-  <td><%= question.title %></td>
-</tr>
+<div>
+    <%= question.title %>
+    <%= link_to 'Show', question_path(question) %>
+    <%= link_to 'Edit', question_path(question) %>
+    <%= link_to 'Delete', question_path(question),
+                method: :delete,
+                data: {confirm: "Are you sure?"}
+    %>
+</div>
