--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -15,7 +15,7 @@
   </div>
 
   <div>
-    <span class="title">Questions:</span>
+    <div class="title">Questions:</div>
     <%= render @test.questions %><br>
   </div>
 
