--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -11,4 +11,5 @@
                 method: :delete,
                 data: { confirm: 'Are you sure to delete test?' } %>
   </td>
+  <td><%= button_to 'Start', start_test_url(test) %></td>
 </tr>
