--- a/app/assets/stylesheets/test_pessages.scss
+++ b/app/assets/stylesheets/test_pessages.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the results controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.test__passage {
+  display: grid;
+  grid-template-rows: 20px 1fr;
+  align-items: center;
+  justify-content: center;
+  margin-top: 24px;
+
+  form {
+    margin: 0;
+    grid-row-gap: 0;
+  }
+
+  p {
+    width: 200px;
+    display: grid;
+    grid-template-columns: 20px 1fr;
+    grid-column-gap: 8px;
+    align-items: center;
+    justify-content: center;
+  }
+}
