--- a/app/assets/stylesheets/test_pessages.scss
+++ b/app/assets/stylesheets/test_pessages.scss
@@ -22,3 +22,13 @@
     justify-content: center;
   }
 }
+
+.passage-success {
+  color: green;
+  font-weight: 700;
+}
+
+.passage-failure {
+  color: red;
+  font-weight: 700;
+}
