--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,8 +2,8 @@
   <%= render 'shared/errors', resource: @user %>
 
   <div>
-    <%= form.label :login %><br>
-    <%= form.text_field :login, id: :user_login %>
+    <%= form.label :email %><br>
+    <%= form.text_field :email, id: :user_email %>
   </div>
 
   <div>
