--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -1,6 +1,6 @@
 <div class="test_card_wrapper">
   <div>
-    <span class="title">Title:</span>
+    <span class="logo">Title:</span>
     <%= @answer.title %>
   </div>
 
