--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -1,21 +1,21 @@
 <div class="test_card_wrapper">
   <div>
-    <span class="title">Title:</span>
+    <span class="logo">Title:</span>
     <%= @test.title %>
   </div>
 
   <div>
-    <span class="title">Level:</span>
+    <span class="logo">Level:</span>
     <%= @test.level %>
   </div>
 
   <div>
-    <span class="title">Category:</span>
+    <span class="logo">Category:</span>
     <%= @test.category.title %>
   </div>
 
   <div>
-    <div class="title">Questions:</div>
+    <div class="logo">Questions:</div>
     <%= render @test.questions %><br>
   </div>
 
