--- a/app/assets/stylesheets/tests.scss
+++ b/app/assets/stylesheets/tests.scss
@@ -39,6 +39,7 @@ a:hover {
 .table {
   width: 95%;
   margin: 0 auto;
+  height: auto;
 
   tr {
     th {
@@ -53,6 +54,19 @@ form {
   display: grid;
   grid-template-rows: repeat(4, 40px);
   grid-row-gap: 36px;
+
+  &.button_to {
+    width: 66px;
+    margin: 8px;
+    display: block;
+    grid-template-rows: none;
+
+
+    input[type="submit"] {
+      width: 50px;
+      padding-left: 0;
+    }
+  }
 
   input, select {
     width: 100%;
@@ -98,7 +112,7 @@ form {
   min-height: 260px;
   padding: 24px;
 
-  .title {
+  .logo {
     font-weight: 700;
   }
 
