--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
 <body>
 <%= render 'shared/header', locals:{current_user: current_user}%>
 
+<%= render 'shared/flash' %>
+
 <%= yield %>
 
 <%= render 'shared/footer' %>
