--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <style>
-      /* Email styles need to be inline */
-    </style>
-  </head>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <style>
+      .mailbox {
+          border: 3px solid #3c85e0;
+          padding: 10px;
+          border-radius: 5px;
+          width: 70%;
+          margin: 25px auto 0 auto;
+      }
+  </style>
+</head>
 
-  <body>
+<body>
+  <div class="mailbox">
     <%= yield %>
-  </body>
+  </div>
+</body>
 </html>
