--- a/app/views/admin/tests/edit.html.erb
+++ b/app/views/admin/tests/edit.html.erb
@@ -1,4 +1,4 @@
 <h1>Edit: <%= @test.title %></h1>
 
 <%= render 'form' %>
-<%= link_to 'Back', tests_path, {class: "back"} %>
+<%= link_to 'Back', admin_tests_path, {class: "back"} %>
