--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -16,14 +16,14 @@
 
   <div>
     <div class="logo">Questions:</div>
-    <%= render @test.questions %><br>
+    <%= render partial: 'questions/question', collection: @test.questions %><br>
   </div>
 
   <div class="actions_wrapper">
-    <%= link_to 'Edit', edit_test_path(@test), { class: "edit"} %>
+    <%= link_to 'Edit', edit_admin_test_path(@test), { class: "edit"} %>
     <%= link_to 'Add Question', new_test_question_path(@test), { class: "edit"} %>
   </div>
 
 </div>
 
-<%= link_to 'Back', tests_path, { class: "back"} %>
+<%= link_to 'Back', admin_tests_path, { class: "back"} %>
