--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -20,4 +20,4 @@
   </div>
 </div>
 
-<%= link_to 'Back', tests_path, { class: "back"} %>
+<%= link_to 'Back', admin_tests_path, { class: "back"} %>
