--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -15,6 +15,7 @@
       </p>
     <% end %>
 
+    <div class="submit"><%= link_to 'Gist', gist_result_path(@test_passage), method: :post %> </div>
     <div class="submit"><%= form.submit 'Next' %></div>
   <% end %>
 </div>
