--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -36,3 +36,12 @@
   border-left: 1px solid #50cd2d;
 }
 
+.gists_header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 16px;
+  left: 223px;
+}
+
