--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+@import "./typography/icons.scss";
+@import "bootstrap";
 * {
     box-sizing: border-box;
     margin: 0;
