--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -9,7 +9,11 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Title</th>
+      <th class="sort-by-title pointer">
+        Title
+        <%= octicon 'arrow-up', class: 'text-success hide' %>
+        <%= octicon 'arrow-down', class: 'text-success hide' %>
+      </th>
       <th>Level</th>
       <th>Category</th>
       <th>QuestionsCount</th>
