finish video and task

--- a/app/assets/stylesheets/test_pessages.scss
+++ b/app/assets/stylesheets/test_pessages.scss
@@ -32,3 +32,15 @@
   color: red;
   font-weight: 700;
 }
+
+.my-progress-bar {
+  height: 10px;
+  width: 400px;
+  border: 1px solid #000;
+  margin: 0 auto;
+}
+
+.green-bar {
+  background: #00ff00;
+  height: 8px;
+}
