--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,11 +1,13 @@
-<% if resource.errors.present? %>
-  <div>
-    <h2><%= pluralize(resource.errors.count, 'error') %> detected:</h2>
+<% if resource.present? && resource.errors.present? %>
+  <%= content_tag :div, class: 'resource-error', data: { resource_id: resource.id } do %>
+    <div>
+      <h2><%= pluralize(resource.errors.count, 'error') %> detected:</h2>
 
-    <ul>
-      <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
+      <ul>
+        <% resource.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 <% end %>
