--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -1,6 +1,7 @@
 <header class='header'>
   <p class='logo'><%= link_to 'Tests', admin_tests_path %></p>
   <p class='gists_header'><%= link_to 'Gists', admin_gists_path%></p>
+  <p class='admin-badges-list'><%= link_to 'Achievements', admin_badges_path %></p>
   <p class='menu'><%= header_menu(current_user) %>  </p>
 
   <% if user_signed_in? then %>
