--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,6 @@
 <header class='header'>
   <p class='logo'><%= link_to 'TestGuru', root_path %></p>
+  <p class="user-badges-list"><%= link_to 'Achievements', badges_path %></p>
   <p class='menu'><%= header_menu(current_user) %>  </p>
 
   <% if user_signed_in? then %>
