--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -12,6 +12,11 @@
   </div>
 
   <div>
+    <%= form.label :time %><br>
+    <%= form.number_field :time_to_pass, id: :test_time_to_pass %>
+  </div>
+
+  <div>
     <%= form.label :category_id %><br>
     <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true %>
   </div>
