--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -10,6 +10,11 @@
   </div>
 
   <div>
+    <span class="logo">Time to pass:</span>
+    <%= @test.time_to_pass %> minutes
+  </div>
+
+  <div>
     <span class="logo">Category:</span>
     <%= @test.category.title %>
   </div>
