--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -25,3 +25,14 @@
 .field {
   position: relative;
 }
+
+.timer {
+  display: flex;
+  align-items: center;
+  width: 96px;
+  height: 24px;
+  text-align: center;
+  margin-top: 10px;
+  color: green;
+  font-size: 20px;
+}
